# run0-sudo-shim

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  flake.nix  treefmt.nix
.github/workflows/: check-tag.yml  nix-github-actions.yml  rust-build.yml
src/: args.rs  main.rs
src/run0-sudo-shim/: args.rs  builder.rs  common.rs  main.rs
src/run0-sudo-shim/sudo/: args.rs  mod.rs
