[[bin]]
name = "run0-sudo-shim"
path = "src/run0-sudo-shim/main.rs"

[build-dependencies]
clap = {version = "4.5.4", features = ["derive"]}
clap_mangen = "0.3.0"

[dependencies]
clap = {version = "4.5.4", features = ["derive"]}

[package]
name = "run0-sudo-shim"
version = "1.2.0"
edition = "2024"
description = "Shim for the sudo command that utilizes run0"
license = "BSD-3-Clause"
