[[bin]]
name = "run0-sudo-shim"
path = "src/run0-sudo-shim/main.rs"

[build-dependencies]
clap_mangen = "0.3.0"
clap_complete = "4.6.5"
clap = {version = "4.5.4", features = ["derive"]}

[dependencies]
clap = {version = "4.5.4", features = ["derive"]}
users = {version = "0.11.0", default-features = false}

[package]
name = "run0-sudo-shim"
version = "1.4.2"
edition = "2024"
description = "Shim for the sudo command that utilizes run0"
license = "BSD-3-Clause"
authors = ["Grimmauld <grimmauld@grimmauld.de>"]
readme = "README.md"
repository = "https://github.com/LordGrimmauld/run0-sudo-shim"
exclude = [
  "result",
  "result-*",
  "*.nix",
  "nix/",
  ".gitignore",
  ".github/"
]
